--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -1372,14 +1372,14 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/ChartState.h</locationURI>
 		</link>
 		<link>
-			<name>LM/DALM.cpp</name>
+			<name>LM/DALMWrapper.cpp</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/DALM.cpp</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/DALMWrapper.cpp</locationURI>
 		</link>
 		<link>
-			<name>LM/DALM.h</name>
+			<name>LM/DALMWrapper.h</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/DALM.h</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/DALMWrapper.h</locationURI>
 		</link>
 		<link>
 			<name>LM/IRST.cpp</name>
