Replaced the tokenizer with a PCL implementation.

--- a/contrib/arrow-pipelines/pcl/training_pipeline.cfg
+++ b/contrib/arrow-pipelines/pcl/training_pipeline.cfg
@@ -1,6 +1,7 @@
 [Configuration]
 source_language = en
-target_language = lt
+#target_language = lt
+target_language = nl
 max_segment_length = 20
 corpus_development_size = 1000
 corpus_evaluation_size = 500
@@ -16,5 +17,7 @@ giza_installation_directory = $(GIZA_HOME)
 irstlm_installation_directory = $(IRSTLM)
 
 [Inputs]
-src_filename = test_data/cleantrain.en
-trg_filename = test_data/cleantrain.lt
+#src_filename = test_data/cleantrain.en
+#trg_filename = test_data/cleantrain.lt
+src_filename = test_data/Europarl_clean.50000.en
+trg_filename = test_data/Europarl_clean.50000.nl
