--- a/contrib/arrow-pipelines/pcl/training_pipeline.cfg
+++ b/contrib/arrow-pipelines/pcl/training_pipeline.cfg
@@ -1,23 +1,21 @@
 [Configuration]
 source_language = en
-#target_language = lt
-target_language = nl
+target_language = lt
 max_segment_length = 20
 corpus_development_size = 1000
 corpus_evaluation_size = 500
 alignment_method = grow-diag-final-and
 reordering_method = msd-bidirectional-fe
 smoothing_method = improved-kneser-ney
-tokenisation_directory = test_data/tokenisation
-translation_model_directory = test_data/model
-language_model_directory = test_data/lm
-mert_directory = test_data/mert
+tokenisation_directory = training/tokenisation
+translation_model_directory = training/model
+language_model_directory = training/lm
+mert_directory = training/mert
+mert_max_no_iterations = 10
 moses_installation_directory = $(MOSES_HOME)
 giza_installation_directory = $(GIZA_HOME)
 irstlm_installation_directory = $(IRSTLM)
 
 [Inputs]
-#src_filename = test_data/cleantrain.en
-#trg_filename = test_data/cleantrain.lt
-src_filename = test_data/Europarl_clean.50000.en
-trg_filename = test_data/Europarl_clean.50000.nl
+src_filename = ../test_data/cleantrain.en
+trg_filename = ../test_data/cleantrain.lt
