moses windows build, with some TODO list

--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,6 @@ scripts/training/phrase-extract/relax-parse
 scripts/training/phrase-extract/score
 scripts/training/phrase-extract/statistics
 scripts/training/symal/symal
-scripts/training/train-model.perl
 dist
 bin
 previous.sh
@@ -71,3 +70,8 @@ mert/sentence-bleu
 .DS_Store
 *.pbxuser
 *.mode1v3
+
+*.exe
+build/
+nbproject/
+
