--- a/contrib/jni/Makefile
+++ b/contrib/jni/Makefile
@@ -14,10 +14,7 @@ src/queryPhraseTableMin_wrap.cxx: queryPhraseTableMin.i
 build/libJavaQueryPhraseTableMin.so: QueryPhraseTableMin.cpp src/queryPhraseTableMin_wrap.cxx ../../lib/*.a
 	g++ -Wno-deprecated -shared -fPIC -g -O2 \
 	QueryPhraseTableMin.cpp src/queryPhraseTableMin_wrap.cxx \
-	../../lib/*.a ../../lib/libfuzzy-match.a ../../lib/libCYKPlusParser.a ../../lib/libCompactPT.a ../../lib/libOnDiskPt.a ../../lib/libmoses.a ../../lib/libmoses_internal.a ../../lib/libkenutil.a \
-	../../lib/libCompactPT.a ../../lib/libmoses.a ../../lib/libmoses_internal.a ../../lib/libRuleTable.a ../../lib/libOnDiskPt.a ../../lib/libRuleTable.a ../../lib/libOnDiskPt.a ../../lib/libLM.a ../../lib/libkenutil.a ../../lib/libkenlm.a \
-	../../lib/libCompactPT.a ../../lib/libScope3Parser.a ../../lib/libkenutil.a ../../lib/libmoses.a ../../lib/libRuleTable.a ../../lib/libCompactPT.a ../../lib/libmoses_internal.a \
-	../../lib/*.a \
+	../../lib/*.a ../../lib/*.a ../../lib/*.a \
 	-I../../moses/src -I../.. \
 	-I${JAVA_INCLUDES} -I${JAVA_INCLUDES}/linux \
 	-I../src -I.. -I. \
@@ -29,7 +26,7 @@ build/test: test.cpp
 	test.cpp \
 	-I../src -I.. -I. \
 	-Lbuild -lJavaQueryPhraseTableMin \
-	-o test
+	-o build/test
 
 ${JAVA_CLASSES}: src/queryPhraseTableMin_wrap.cxx
 	javac -d build ${JAVA_SOURCES}
@@ -40,3 +37,7 @@ java: build/libJavaQueryPhraseTableMin.so build/test ${JAVA_CLASSES}
 
 clean:
 	rm -rf src build
+
+#	../../lib/libfuzzy-match.a ../../lib/libCYKPlusParser.a ../../lib/libCompactPT.a ../../lib/libOnDiskPt.a ../../lib/libmoses.a ../../lib/libmoses_internal.a ../../lib/libkenutil.a \
+#	../../lib/libCompactPT.a ../../lib/libmoses.a ../../lib/libmoses_internal.a ../../lib/libRuleTable.a ../../lib/libOnDiskPt.a ../../lib/libRuleTable.a ../../lib/libOnDiskPt.a ../../lib/libLM.a ../../lib/libkenutil.a ../../lib/libkenlm.a \
+#	../../lib/libCompactPT.a ../../lib/libScope3Parser.a ../../lib/libkenutil.a ../../lib/libmoses.a ../../lib/libRuleTable.a ../../lib/libCompactPT.a ../../lib/libmoses_internal.a \
