--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -1157,6 +1157,16 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/GlobalLexicalModelUnlimited.h</locationURI>
 		</link>
 		<link>
+			<name>FF/HyperParameterAsWeight.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/HyperParameterAsWeight.cpp</locationURI>
+		</link>
+		<link>
+			<name>FF/HyperParameterAsWeight.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/HyperParameterAsWeight.h</locationURI>
+		</link>
+		<link>
 			<name>FF/InputFeature.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/InputFeature.cpp</locationURI>
@@ -1250,6 +1260,16 @@
 			<name>FF/SkeletonStatelessFF.h</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/SkeletonStatelessFF.h</locationURI>
+		</link>
+		<link>
+			<name>FF/SoftMatchingFeature.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-9-PROJECT_LOC/home/s0565741/workspace/github/mosesdecoder/moses/FF/SoftMatchingFeature.cpp</locationURI>
+		</link>
+		<link>
+			<name>FF/SoftMatchingFeature.h</name>
+			<type>1</type>
+			<locationURI>PARENT-9-PROJECT_LOC/home/s0565741/workspace/github/mosesdecoder/moses/FF/SoftMatchingFeature.h</locationURI>
 		</link>
 		<link>
 			<name>FF/SourceWordDeletionFeature.cpp</name>
